--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
+    <!-- <link rel="stylesheet" href="../assets/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="./assets/bootstrap.min.css">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>React App</title>
@@ -17,4 +18,5 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
+  <script src="./assets/bootstrap.bundle.min.js"></script>
 </html>
